[gd_scene load_steps=10 format=3 uid="uid://dbniyic1m585g"]

[ext_resource type="Script" path="res://scripts/ui/night_transition.gd" id="1_au4mh"]
[ext_resource type="FontFile" uid="uid://du27s588u2ldk" path="res://assets/ui/font_tnr/regular.ttf" id="1_pfa7k"]
[ext_resource type="FontFile" uid="uid://b0hhby61o43h0" path="res://assets/ui/font_tnr/bold.ttf" id="2_xvfyo"]
[ext_resource type="FontFile" uid="uid://beiky4b2vaee0" path="res://assets/ui/font_tnr/italic.ttf" id="3_hm75i"]
[ext_resource type="FontFile" uid="uid://bfuecdby3o8i0" path="res://assets/ui/font_tnr/bold_italic.ttf" id="4_g73w4"]
[ext_resource type="Texture2D" uid="uid://bx5412b7fiovw" path="res://assets/ui/loading_icon.png" id="6_nvwup"]
[ext_resource type="AudioStream" uid="uid://dfqmtd58isf6e" path="res://assets/audio/menus/night_start_sound.wav" id="7_y3c27"]

[sub_resource type="Animation" id="Animation_je7jr"]
resource_name = "fade"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NightLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2.5, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NightLabel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 4),
"transitions": PackedFloat32Array(0.277392, 1, 3.86374),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1, 1), Vector2(0.95, 0.95)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NightLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1olqh"]
_data = {
"fade": SubResource("Animation_je7jr")
}

[node name="NightTransition" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_au4mh")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="NightLabel" type="RichTextLabel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -271.0
offset_top = -66.0
offset_right = 271.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(271, 66)
theme_override_fonts/normal_font = ExtResource("1_pfa7k")
theme_override_fonts/bold_font = ExtResource("2_xvfyo")
theme_override_fonts/italics_font = ExtResource("3_hm75i")
theme_override_fonts/bold_italics_font = ExtResource("4_g73w4")
theme_override_font_sizes/normal_font_size = 41
theme_override_font_sizes/bold_font_size = 74
theme_override_font_sizes/italics_font_size = 51
theme_override_font_sizes/bold_italics_font_size = 51
bbcode_enabled = true
text = "[center][b]Night 1[/b][/center]
[center]12:00 AM[/center]"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1olqh")
}

[node name="LoadIcon" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -104.0
offset_right = -25.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("6_nvwup")
expand_mode = 1

[node name="LoadTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_y3c27")
autoplay = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="LoadTimer" to="." method="_on_load_timer_timeout"]
